--- a/_notebooks/homework/java/2025-09-21-1.2-variables-curators.ipynb
+++ b/_notebooks/homework/java/2025-09-21-1.2-variables-curators.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cc9ff26e",
    "metadata": {
     "vscode": {
@@ -469,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "java (IJava/j!)",
+   "display_name": "Java",
    "language": "java",
-   "name": "jbang-ijava"
+   "name": "java"
   },
   "language_info": {
    "codemirror_mode": "java",
@@ -479,7 +479,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.15+0"
+   "version": "17.0.16+0"
   }
  },
  "nbformat": 4,
