--- a/_notebooks/2025-10-01-lesson1.1-algorithms-hw.ipynb
+++ b/_notebooks/2025-10-01-lesson1.1-algorithms-hw.ipynb
@@ -13,7 +13,7 @@
     "layout: post\n",
     "toc: true\n",
     "title: HW & Hacks - Introduction to Algorithms, Programming, and Compilers \n",
-    "permalink: /csa/algorithms/hw\n",
+    "permalink: /algorithms/hw\n",
     "author: Avika Prasad\n",
     "---"
    ]
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "abecb118",
    "metadata": {},
    "outputs": [
@@ -104,26 +104,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your grade will be A\n"
+      "Your grade will be B\n"
      ]
     }
    ],
    "source": [
     "assignment_grades = input(\"Enter assignment grades separated by spaces: \")\n",
     "\n",
+    "# Inputs were 90 80 70\n",
+    "\n",
     "assignment_grades = [float(grade) for grade in assignment_grades.split()]\n",
     "\n",
-    "for grade in assignment_grades:\n",
-    "    if grade >= 90:\n",
+    "average_of_assignments = sum(assignment_grades)/3\n",
+    "\n",
+    "if average_of_assignments >= 90:\n",
     "        grade = 'A'\n",
-    "    elif grade >= 80:\n",
+    "elif average_of_assignments >= 80:\n",
     "        grade = 'B'\n",
-    "    elif grade >= 70:\n",
+    "elif average_of_assignments >= 70:\n",
     "        grade = 'C'\n",
-    "    elif grade >= 60:\n",
+    "elif average_of_assignments >= 60:\n",
     "        grade = 'D'\n",
-    "    else:\n",
+    "else:\n",
     "        grade = 'F'\n",
+    "\n",
     "print(\"Your grade will be \" + grade)"
    ]
   }
